--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
         "bower_components"
     ],
     "dependencies": {
-        "platform": "Polymer/platform"
+        "platform": "Polymer/platform",
+        "normalize": "necolas/normalize.css#~3.0.2"
     }
 }
