--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,6 @@
     "bower_components"
   ],
   "dependencies": {
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.1.1"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#0.7.24"
   }
 }
