--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,12 @@
 {
   "name": "statblock5e",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A web component for D&D 5E statblocks.",
   "authors": [
     "Val Markovic <val@markovic.io> (http://val.markovic.io)"
+  ],
+  "contributors": [
+    "sporeservantpub <sporeservant@gmail.com> (https://github.com/sporeservantpub)"
   ],
   "license": "Apache-2.0",
   "main": "src/statblock5e.html",
